# TER_pointcloud

projet2/: nuage_couloir.ply
projet2/src/: CMakeLists.txt  test_ransac.cpp
